# toy-hashgraph

./: Cargo.toml  README.md
examples/container/: Dockerfile  README.md  docker-compose.yml  makefile
examples/container/node/: Dockerfile  README.md
examples/container/node/src/: config.py  gossip.py  handlers.py  hashgraph.py  keys.py  main.py  network.py  observer.py  peers.py
examples/container/observer/: Dockerfile
examples/container/observer/src/: config.py  main.py  network.py  nodes.py  test1.py  test2.py  test3.py  test4.py  util.py  visualization.py
examples/container/src/: config.py  main.py  network.py  peers.py  tests.py
examples/python/: config.py  example.py  run.sh  simulation.py  visualization.py
examples/python-viz/: run.sh
examples/python-viz/src/: config.py  main.py  visualization.py
examples/python/src/: keys.py  simulation.py  test_graph.py
examples/web/: index.html  jsconfig.json  package-lock.json  package.json  run.sh  tailwind.config.js  vite.config.js
examples/web/src/: App.svelte
toy-hashgraph/: Cargo.toml
toy-hashgraph-js/: Cargo.toml
toy-hashgraph-js/src/: lib.rs
toy-hashgraph-py/: Cargo.toml  pyproject.toml
toy-hashgraph-py/src/: lib.rs
toy-hashgraph/src/: common.rs  event.rs  graph.rs  lib.rs
