[package]
name = "toy-hashgraph-py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "toy_hashgraph_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
toy-hashgraph = { path = "../toy-hashgraph" }
serde_json = "1.0"
